--- a/index.html
+++ b/index.html
@@ -1,11 +1,187 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="stylesheet" href="assets/css/styles.css" />
+
+    <link href="https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css" rel="stylesheet" />
+
+    <title>Smile Gupta</title>
 </head>
+
 <body>
-    
+    <header class="l-header">
+        <nav class="nav bd-grid">
+            <div>
+                <a href="https://github.com/smilegupta" class="nav__logo">Smile Gupta</a>
+            </div>
+
+            <div class="nav__menu" id="nav-menu">
+                <ul class="nav__list">
+                    <li class="nav__item">
+                        <a href="#home" class="nav__link active">Home</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#about" class="nav__link">About</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#skills" class="nav__link">Skills</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#work" class="nav__link">Work</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#contact" class="nav__link">Contact</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="nav__toggle" id="nav-toggle">
+                <i class="bx bx-menu"></i>
+            </div>
+        </nav>
+    </header>
+
+    <main class="l-main">
+        <section class="home bd-grid" id="home">
+            <div class="home__data">
+                <h1 class="home__title">
+                    Hi,<br />I'am <span class="home__title-color">Smile</span><br />Frontend Engineer
+                </h1>
+
+                <a href="https://www.linkedin.com/in/smilegupta/" class="button">Contact</a>
+            </div>
+
+            <div class="home__social">
+                <a href="https://www.facebook.com/smileguptaaa" class="home__social-icon"><i
+                        class="bx bxl-facebook"></i></a>
+                <a href="https://www.instagram.com/smileguptaaa/" class="home__social-icon"><i
+                        class="bx bxl-instagram"></i></a>
+                <a href="https://github.com/smilegupta" class="home__social-icon"><i class="bx bxl-github"></i></a>
+                <a href="https://www.linkedin.com/in/smilegupta/" class="home__social-icon"><i
+                        class="bx bxl-linkedin"></i></a>
+                <a href="https://twitter.com/smileguptaaa" class="home__social-icon"><i class="bx bxl-twitter"></i></a>
+            </div>
+
+            <div class="home__img">
+                <img src="assets/img/perfil.png" alt="" />
+            </div>
+        </section>
+        <section class="about section" id="about">
+            <h2 class="section-title">About</h2>
+
+            <div class="about__container bd-grid">
+                <div class="about__img">
+                    <img src="assets/img/about.jpg" alt="" />
+                </div>
+
+                <div>
+                    <h2 class="about__subtitle">I'am Smile Gupta</h2>
+                    <p class="about__text">
+                        A Frontend Engineer from Lovely Professional University, Jalandhar, 
+                        who along with daily 9-5 work loves to mentor beginners to success. 
+                        Currently I m a Frontend Engineer  at KonfHub Technologies Bangalore.
+                    </p>
+                </div>
+            </div>
+        </section>
+        <section class="skills section" id="skills">
+            <h2 class="section-title">Skills</h2>
+
+            <div class="skills__container bd-grid">
+                <div>
+                    <h2 class="skills__subtitle">Profesional Skills</h2>
+                    <p class="skills__text">
+                       I m a young tech aspirant carrying 5 years of prolific experience in learning and teaching different fields of technologies.
+                    </p>
+                    <div class="skills__data">
+                        <div class="skills__names">
+                            <i class="bx bxl-html5 skills__icon"></i>
+                            <span class="skills__name">HTML5</span>
+                        </div>
+                        <div class="skills__bar skills__html"></div>
+                        <div>
+                            <span class="skills__percentage">95%</span>
+                        </div>
+                    </div>
+                    <div class="skills__data">
+                        <div class="skills__names">
+                            <i class="bx bxl-css3 skills__icon"></i>
+                            <span class="skills__name">CSS3</span>
+                        </div>
+                        <div class="skills__bar skills__css"></div>
+                        <div>
+                            <span class="skills__percentage">85%</span>
+                        </div>
+                    </div>
+                    <div class="skills__data">
+                        <div class="skills__names">
+                            <i class="bx bxl-javascript skills__icon"></i>
+                            <span class="skills__name">JAVASCRIPT</span>
+                        </div>
+                        <div class="skills__bar skills__js"></div>
+                        <div>
+                            <span class="skills__percentage">65%</span>
+                        </div>
+                    </div>
+                    <div class="skills__data">
+                        <div class="skills__names">
+                            <i class="bx bxs-paint skills__icon"></i>
+                            <span class="skills__name">UX/UI</span>
+                        </div>
+                        <div class="skills__bar skills__ux"></div>
+                        <div>
+                            <span class="skills__percentage">85%</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div>
+                    <img src="assets/img/work1.jpg" alt="" class="skills__img" />
+                </div>
+            </div>
+        </section>
+
+        <section class="work section" id="work">
+            <h2 class="section-title">Work</h2>
+
+            <div class="work__container bd-grid">
+                <div class="work__img">
+                    <img src="assets/img/work1.jpg" alt="" />
+                </div>
+                <div class="work__img">
+                    <img src="assets/img/work2.jpg" alt="" />
+                </div>
+                <div class="work__img">
+                    <img src="assets/img/work3.jpg" alt="" />
+                </div>
+                <div class="work__img">
+                    <img src="assets/img/work4.jpg" alt="" />
+                </div>
+                <div class="work__img">
+                    <img src="assets/img/work5.jpg" alt="" />
+                </div>
+                <div class="work__img">
+                    <img src="assets/img/work6.jpg" alt="" />
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="footer" id="contact">
+        <div class="footer__social">
+            <a href="https://www.facebook.com/smileguptaaa" class="footer__icon"><i class="bx bxl-facebook"></i></a>
+            <a href="https://github.com/smilegupta" class="footer__icon"><i class="bx bxl-github"></i></a>
+            <a href="https://www.instagram.com/smileguptaaa/" class="footer__icon"><i class="bx bxl-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/smilegupta/" class="footer__icon"><i class="bx bxl-linkedin"></i></a>
+            <a href="https://twitter.com/smileguptaaa" class="footer__icon"><i class="bx bxl-twitter"></i></a>
+        </div>
+        <p>A project by Smile Gupta</p>
+    </footer>
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="assets/js/main.js"></script>
 </body>
+
 </html>
