Some Basic grammar Corrections

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <section class="home bd-grid" id="home">
             <div class="home__data">
                 <h1 class="home__title">
-                    Hi,<br />I'am <span class="home__title-color">Smile</span><br />Frontend Engineer
+                    Hi,<br />I am <span class="home__title-color">Smile</span><br />Frontend Engineer
                 </h1>
 
                 <a href="https://www.linkedin.com/in/smilegupta/" class="button">Contact</a>
@@ -79,11 +79,11 @@
                 </div>
 
                 <div>
-                    <h2 class="about__subtitle">I'am Smile Gupta</h2>
+                    <h2 class="about__subtitle">I am Smile Gupta</h2>
                     <p class="about__text">
                         A Frontend Engineer from Lovely Professional University, Jalandhar, 
                         who along with daily 9-5 work loves to mentor beginners to success. 
-                        Currently I m a Frontend Engineer  at KonfHub Technologies Bangalore.
+                        Currently I am a Frontend Engineer at KonfHub Technologies Bangalore.
                     </p>
                 </div>
             </div>
@@ -95,7 +95,7 @@
                 <div>
                     <h2 class="skills__subtitle">Profesional Skills</h2>
                     <p class="skills__text">
-                       I m a young tech aspirant carrying 5 years of prolific experience in learning and teaching different fields of technologies.
+                       I am a young tech aspirant carrying 5 years of prolific experience in learning and teaching different fields of technologies.
                     </p>
                     <div class="skills__data">
                         <div class="skills__names">
